[package]
name = "adventofcode2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
daggy = "0.8.0"
ethnum = "1.3.2"
itertools = "0.10.5"
num = "0.4.0"
pathfinding = "4.0.0"
regex = "1.7.0"
